data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_641.wast
;; 2. **Test `br_if` with Simple False Condition:**    - A conditional branch `br_if` with a simple condition that evaluates to false. Check if the branch is not taken in both implementations.    - Constraint Checked: Correct evaluation of the false condition in `br_if`.    - Relation: Ensures `br_if` does not branch when condition is false.

(assert_invalid
  (module
    (func $br_if_false_condition
      (block
        (br_if 0 (i32.const 0))
      )
    )
  )
  "type mismatch"
)